@@ -17,7 +17,7 @@ people to play with it and give feedback.
 
 == Installation
 
-Gecode/R requires Gecode 2.1.1, which can be downloaded from 
+Gecode/R requires Gecode 2.2.0, which can be downloaded from 
 http://www.gecode.org/download.html . See 
 http://www.gecode.org/gecode-doc-latest/PageComp.html for the installation
 instructions.
