@@ -8,8 +8,8 @@ description: Constraints and various features of Gecode supported by the Ruby in
 h1. Features
 
 <div class="summary">
-<p>Gecode/R provides access to many, but not all, of "Gecode's 
-features":http://www.gecode.org/gecode-doc-search-2.1.1/modules.html.</p>
+<p>Gecode/R provides access to many, but not all, of the "features 
+in Gecode 2.2.0":http://www.gecode.org/gecode-doc-search-2.2.0/modules.html.</p>
 </div>
 
 h2. Supported platforms
@@ -24,26 +24,26 @@ h2. Supported Gecode features
 The following things are supported by Gecode/R.
 
 * Boolean variables with the following constraints
-** "Simple relation":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntRelBool.html except the ones involving arrays of variables
-** "Linear":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntLinearBool.html
+** "Simple relation":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelIntRelBool.html except the ones involving arrays of variables
+** "Linear":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelIntLinearBool.html
 * Finite domain integer variables with the following constraints
-** "Arithmetic":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntArith.html
-** "Cardinality":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntCard.html except for the ones involving more than one variable array
-** "Channel":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntChannel.html 
-** "Distinct":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntDistinct.html
-** "Domain":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntDomain.html
-** "Element":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntElement.html
-** "Linear":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntLinearInt.html
-** "Simple relation":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntRelInt.html
-** "Sorted":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntSorted.html
-** "Extensional":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntExt.html but the DFA can not be specified directly, only via an interface to REG
+** "Arithmetic":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelIntArith.html except for div, mod and divmod
+** "Cardinality":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelIntCard.html except for the ones involving more than one variable array
+** "Channel":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelIntChannel.html 
+** "Distinct":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelIntDistinct.html
+** "Domain":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelIntDomain.html except for the ones that constrain the domain of an array of integer variables
+** "Element":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelIntElement.html except for the ones involving an array of boolean variables
+** "Linear":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelIntLinearInt.html
+** "Simple relation":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelIntRelInt.html except for the ones involving an array of integer variables
+** "Sorted":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelIntSorted.html
+** "Extensional":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelIntExt.html but the DFA can not be specified directly, only via an interface to REG
 * Finite integer sets with the following constraints
-** "Distinct":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelSetDistinct.html
-** "Domain":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelSetDom.html
-** "Connection constraints to finite domain variables":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelSetConnect.html
-** "Relation":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelSetRel.html
-** "Set selection":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelSetSelection.html
-** "Set operation":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelSetRelOp.html
+** "Distinct":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelSetDistinct.html
+** "Domain":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelSetDom.html
+** "Connection constraints to finite domain variables":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelSetConnect.html
+** "Relation":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelSetRel.html
+** "Element":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelSetElement.html except for union and element with arrays of constant sets
+** "Set operation":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelSetRelOp.html
 * Branching selection
 * Branch and bound, and depth first search
 * Reification, propagation strength and propagation kind
@@ -57,13 +57,13 @@ in Gecode/R (but might be in the future).
 * Finite integer sets with complete domain representation and all their constraints
 * Unsupported integer constraints
 ** The exceptions noted in the list of supported constraints
-** "Scheduling":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntScheduling.html
-** "Graph":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntGraph.html
+** "Scheduling":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelIntScheduling.html
+** "Graph":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelIntGraph.html
 * Unsupported set constraints
 ** The exceptions noted in the list of supported constraints
-** "Convexity":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelSetConvex.html
-** "Sequence":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelSetSequence.html
-** "Projector":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelSetProjector.html
+** "Convexity":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelSetConvex.html
+** "Sequence":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelSetSequence.html
+** "Projector":http://www.gecode.org/gecode-doc-search-2.2.0/group__TaskModelSetProjector.html
 * Limited discrepancy search
 * Custom propagators and branching strategies
 * Reflection
